#added initial chat layout #added check when exiting the app #given fab a temporary action

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.gmail.prototype1.chataf.home" />
         </activity>
+        <activity android:name=".chat_main"/>
     </application>
+
 
 </manifest>
