--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gmail.prototype1.chataf">
 
+    <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
@@ -39,8 +40,6 @@
         <activity android:enabled="true"  android:name=".WifiChatActivity" android:screenOrientation="portrait" android:windowSoftInputMode="adjustResize"/>
         <service android:enabled="true" android:name=".ChatService" />
     </application>
-
-
 
 
 </manifest>
